working on addToCart

--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,19 @@ ul {
   align-items: center;
 }
 
+div.cardBottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 1rem .5rem;
+}
+
 svg.addcart {
-  align-self: flex-end;
   background-color: rgba(245, 245, 245, 0.686);
   padding: 0.5rem 1rem;
   border-radius: 1rem;
 }
 
+svg.addcart:hover {
+  background-color: whitesmoke;
+}
